Added add video test
